--- a/ShopMyPham/ShopMyPham/Areas/Admin/Views/User/ListUser.cshtml
+++ b/ShopMyPham/ShopMyPham/Areas/Admin/Views/User/ListUser.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "Danh Sách Nhân Viên";
-    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";    
+    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
     var list = (List<ShopMyPham.Areas.Admin.Models.NhanVienModel>)Model;
     ShopMyPham.Areas.Admin.Models.NhanVienModel nhanVien = new ShopMyPham.Areas.Admin.Models.NhanVienModel();
     var newUser = new ShopMyPham.Areas.Admin.Models.NhanVienModel();
@@ -38,7 +38,7 @@
                                 <div class="col-md-4 col-sm-4 col-xs-12 profile_details">
                                     <div class="well profile_view">
                                         <div class="col-sm-12">
-                                            <h4 class="brief"><i>Quản Lý</i></h4>
+                                                <h4 class="brief"><i>Quản Lý</i></h4>
                                             <div class="left col-xs-7">
                                                 <h2>@user.Ten</h2>
                                                 <ul class="list-unstyled">
@@ -54,15 +54,11 @@
                                             <div class="col-xs-12 col-sm-6 emphasis" style="width:75%">
                                                 @{
                                                     string id = "#" + user.ID;
+                                                    string edit = "#edit_" + user.ID;
+                                                    string edit2 = "edit_" + user.ID;
                                                 }
                                                 <button type="button" class="btn btn-success btn-xs" data-toggle="modal" data-target=@id>
                                                     <i class="fa fa-eye"></i> Xem
-                                                </button>
-                                                <button type="button" class="btn btn-warning btn-xs">
-                                                    <i class="fa fa-pencil"></i> Chỉnh Sửa
-                                                </button>
-                                                <button type="button" class="btn btn-danger btn-xs">
-                                                    <i class="fa fa-remove"> </i> Xóa
                                                 </button>
                                             </div>
                                         </div>
@@ -88,7 +84,7 @@
                                                                     <i class="fa fa-phone"> Số Điện Thoại: @user.Sdt</i>
                                                                 </p>
                                                                 <p>
-                                                                    <i class="fa fa-at"> Email: @user.Sdt</i>
+                                                                    <i class="fa fa-at"> Email: @user.Email</i>
                                                                 </p>
                                                             </ul>
                                                         </div>
@@ -98,7 +94,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                                    }                            
+
+                                                    }
                             <div class="modal fade" id="add" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
                                 <div class="modal-dialog" role="document">
                                     <div class="modal-content">
@@ -114,36 +111,32 @@
                                                     {
                                                         <div class="form-horizontal form-label-left input_mask">
                                                             <div class="form-group">
-                                                                
+
                                                                 <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
                                                                     <input type="text" class="form-control has-feedback-left" name="userName" required="required" placeholder="Tài Khoản">
                                                                     <span class="fa fa-user form-control-feedback left" aria-hidden="true"></span>
-                                                                </div> 
+                                                                </div>
                                                                 <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
                                                                     <input type="password" class="form-control has-feedback-left" name="password" required="required" placeholder="Mật Khẩu">
-                                                                    <span class="fa fa-user form-control-feedback left" aria-hidden="true"></span>
-                                                                </div> 
-                                                                <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
-                                                                    <input type="password" class="form-control has-feedback-left" name="configPassword" required="required" placeholder="Nhập Lại Mật Khẩu" data-validate-linked="password">
                                                                     <span class="fa fa-user form-control-feedback left" aria-hidden="true"></span>
                                                                 </div>
                                                                 <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
                                                                     <input type="text" class="form-control has-feedback-left" name="ten" required="required" placeholder="Họ Tên">
                                                                     <span class="fa fa-user form-control-feedback left" aria-hidden="true"></span>
-                                                                </div> 
+                                                                </div>
                                                                 <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
                                                                     <input type="text" class="form-control has-feedback-left" name="diaChi" required="required" placeholder="Địa Chỉ">
                                                                     <span class="fa fa-building form-control-feedback left" aria-hidden="true"></span>
-                                                                </div> 
+                                                                </div>
                                                                 <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
                                                                     <input type="text" class="form-control has-feedback-left" name="sdt" required="required" placeholder="Số Điện Thoại">
                                                                     <span class="fa fa-phone form-control-feedback left" aria-hidden="true"></span>
-                                                                </div> 
+                                                                </div>
                                                                 <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
                                                                     <input type="text" class="form-control has-feedback-left" name="email" required="required" placeholder="Email">
                                                                     <span class="fa fa-envelope form-control-feedback left" aria-hidden="true"></span>
-                                                                </div>                                                                
-                                                            </div>                                                            
+                                                                </div>
+                                                            </div>
                                                             <div class="ln_solid"></div>
                                                             <div class="form-group">
                                                                 <div class="col-md-9 col-sm-9 col-xs-12 col-md-offset-3">
