--- a/ShopMyPham/ShopMyPham/Areas/Admin/Views/KhachHang/ListKhachHang.cshtml
+++ b/ShopMyPham/ShopMyPham/Areas/Admin/Views/KhachHang/ListKhachHang.cshtml
@@ -1,7 +1,9 @@
-﻿@{
+﻿@model ShopMyPham.Areas.Admin.Models.CustomerEditModel
+@{
     ViewBag.Title = "Danh Sách Khách Hàng";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
-    var list = (List<ShopMyPham.Areas.Admin.Models.KhachHangModel>)Model;
+    //var list = (List<ShopMyPham.Areas.Admin.Models.KhachHangModel>)Model;
+    var list = ViewBag.user as List<ShopMyPham.Models.QuanTri>;
 }
 
 <div class="right_col" role="main">
@@ -18,7 +20,14 @@
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="x_panel">
                     <div class="x_title">
-                        <h2>Danh Sách</h2>                        
+                        <h2>Danh Sách</h2>
+
+                        <ul class="nav navbar-right panel_toolbox">
+                            <li>
+                                <button type="button" class="btn btn-success" style="ruby-align:right" data-toggle="modal" data-target="#addCustomer"><i class="fa fa-plus"></i> Thêm</button>
+                            </li>
+                        </ul>
+
                         <div class="clearfix"></div>
                     </div>
                     <div class="x_content">
@@ -36,7 +45,8 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                @foreach (ShopMyPham.Areas.Admin.Models.KhachHangModel user in list)
+                                @*@foreach (ShopMyPham.Areas.Admin.Models.KhachHangModel user in list)*@
+                                @foreach (var user in list)
                                 {
                                     <tr>
                                         <td>@user.ID</td>
@@ -45,22 +55,147 @@
                                         <td>@user.DiaChi</td>
                                         <td>@user.Sdt</td>
                                         <td>@user.Email</td>
-                                        <td>                                            
-                                            <a href="#"><span class="glyphicon glyphicon-remove" aria-hidden="true" style="margin-left:10px;border-radius: 50%;border:1px solid #5A738E;padding:5px 5px;"></span></a>
-                                            
+                                        <td>
+                                            @*<a href="#"><span class="glyphicon glyphicon-remove" aria-hidden="true" style="margin-left:10px;border-radius: 50%;border:1px solid #5A738E;padding:5px 5px;"></span></a>*@
+
                                             @if (user.TrangThai == true)
                                             {
-                                                <a href="#" class="btn-active" data-aID=@user.ID >Disable</a>
+                                                <a href="#" class="btn-active" data-aID=@user.ID>Disable</a>
                                             }
                                             else if (user.TrangThai == false)
                                             {
-                                                <a href="#" class="btn-active" data-aID=@user.ID >Active</a>
+                                                <a href="#" class="btn-active" data-aID=@user.ID>Active</a>
                                             }
+                                            |
+                                            @{ 
+                                                string delete = "delete" + user.ID;
+                                            }
+                                             <a href="#" data-toggle="modal" data-target='.@delete'>Xóa</a>
+
+                                            <div class="modal fade @delete"  role="dialog">
+                                                <div class="modal-dialog modal-lg">
+                                                    <div class="modal-content">
+                                                        <div class="modal-header">
+                                                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                                            <h4 class="modal-title">Thư mục mới</h4>
+                                                        </div>
+
+                                                        @using (Html.BeginForm("customerDelete", "KhachHang", new { id = user.ID}, FormMethod.Post))
+                                                        {
+                                                            <div class="modal-body">
+                                                                Bạn muốn xóa <b>@user.Ten</b> ?
+                                                            </div>
+                                                            <div class="modal-footer">
+                                                                <input id="btnSubmit" class="btn btn-default" type="submit" value="Có" />
+                                                                <button type="button" class="btn btn-default" data-dismiss="modal">Không</button>
+                                                            </div>
+                                                        }
+                                                    </div>
+                                                </div>
+                                            </div>
+
+
+                                            <div class="container">
+                                                <!-- Trigger the modal with a button -->
+                                                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target=".@user.ID">Chỉnh sửa</button>
+
+                                                <!-- Modal -->
+                                                <div class="modal fade @user.ID" role="dialog">
+                                                    <div class="modal-dialog modal-lg">
+                                                        <div class="modal-content">
+                                                            <div class="modal-header">
+                                                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                                                <h4 class="modal-title">Sửa đổi thông tin khách hàng</h4>
+                                                            </div>
+
+                                                            @using (Html.BeginForm("customerEdit", "KhachHang", FormMethod.Post))
+                                                            {
+                                                                <div class="modal-body">
+                                                                    @Html.AntiForgeryToken()
+                                                                    @Html.ValidationSummary(true, null, new { @class = "alert alert-danger" })
+                                                                    <fieldset>
+                                                                        @Html.TextBoxFor(x => x.id, new { @Value = user.ID, @type = "hidden" })
+                                                                        <p>Tên: @user.Ten</p>
+                                                                        <p>Username: @user.Username</p>
+                                                                        <p>Password: @Html.TextBoxFor(x => x.pass, new { @Value = user.Password }) </p>
+                                                                        <p>Địa chỉ: @Html.TextBoxFor(x => x.diachi, new { @Value = user.DiaChi })</p>
+                                                                        <p>Số điện thoại: @Html.TextBoxFor(x => x.Sdt, new { @Value = user.Sdt })</p>
+                                                                        <p>Email: @Html.TextBoxFor(x => x.email, new { @Value = user.Email })</p>
+                                                                    </fieldset>
+                                                                </div>
+                                                                <div class="modal-footer">
+                                                                    <input type="submit" class="btn btn-default" value="Đồng ý" />
+                                                                    <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
+                                                                </div>
+                                                            }
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </td>
                                     </tr>
                                 }
                             </tbody>
                         </table>
+                        @*Popup modal Add customer*@
+                        <div class="modal fade" id="addCustomer" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                        <h4 class="modal-title">Thêm Khách Hàng</h4>
+                                    </div>
+                                    <div class="modal-body">
+                                        <div class="x_panel" style="border:none">
+                                            <div class="x_content">
+                                                <br>
+                                                @using (Html.BeginForm("addCustomer", "KhachHang", FormMethod.Post))
+                                                {
+                                                    <div class="form-horizontal form-label-left input_mask">
+                                                        <div class="form-group">
+
+                                                            <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
+                                                                <input type="text" class="form-control has-feedback-left" name="userName" required="required" placeholder="Tài Khoản">
+                                                                <span class="fa fa-user form-control-feedback left" aria-hidden="true"></span>
+                                                            </div>
+                                                            <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
+                                                                <input type="password" class="form-control has-feedback-left" name="password" required="required" placeholder="Mật Khẩu">
+                                                                <span class="fa fa-user form-control-feedback left" aria-hidden="true"></span>
+                                                            </div>
+                                                            <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
+                                                                <input type="text" class="form-control has-feedback-left" name="ten" required="required" placeholder="Họ Tên">
+                                                                <span class="fa fa-user form-control-feedback left" aria-hidden="true"></span>
+                                                            </div>
+                                                            <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
+                                                                <input type="text" class="form-control has-feedback-left" name="diaChi" required="required" placeholder="Địa Chỉ">
+                                                                <span class="fa fa-building form-control-feedback left" aria-hidden="true"></span>
+                                                            </div>
+                                                            <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
+                                                                <input type="text" class="form-control has-feedback-left" name="sdt" required="required" placeholder="Số Điện Thoại">
+                                                                <span class="fa fa-phone form-control-feedback left" aria-hidden="true"></span>
+                                                            </div>
+                                                            <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
+                                                                <input type="text" class="form-control has-feedback-left" name="email" required="required" placeholder="Email">
+                                                                <span class="fa fa-envelope form-control-feedback left" aria-hidden="true"></span>
+                                                            </div>
+                                                        </div>
+                                                        <div class="ln_solid"></div>
+                                                        <div class="form-group">
+                                                            <div class="col-md-9 col-sm-9 col-xs-12 col-md-offset-3">
+                                                                <button type="reset" class="btn btn-primary">Nhập Lại</button>
+                                                                <button type="submit" class="btn btn-success">Xác Nhận</button>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                }
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
