--- a/ShopMyPham/ShopMyPham/Areas/Admin/Views/Kho/ListSanPham.cshtml
+++ b/ShopMyPham/ShopMyPham/Areas/Admin/Views/Kho/ListSanPham.cshtml
@@ -5,7 +5,21 @@
     //var list = (List<ShopMyPham.Areas.Admin.Models.SanPhamModel>)Model;
     var list = ViewBag.list as List<ShopMyPham.Areas.Admin.Models.SanPhamModel>;   
 }
+<script>
+    $(document).ready(function () {
 
+        $('.edit').click(function () {
+            var idth = $(this).data("idth");
+            var idl = $(this).data("idl");
+            var idkm = $(this).data("idkm");
+
+            $(".thuonghieu").val(idth);
+            $(".loai").val(idl);
+            $(".khuyenmai").val(idkm);
+        });
+
+    });
+</script>
 
 <div class="right_col" role="main">
     <div class="">
@@ -40,13 +54,13 @@
                                     <div class="x_panel" style="border:none">
                                         <div class="x_content">
                                             <br>
-                                            @using (Html.BeginForm("addSanPham", "Kho", FormMethod.Post))
+                                            @using (Html.BeginForm("addSanPham", "Kho", FormMethod.Post, new { enctype = "multipart/form-data" }))
                                             {
                                                 <div class="form-horizontal form-label-left input_mask">
                                                     <div class="form-group">                                                        
                                                         <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
-                                                            @Html.TextBoxFor(x => x.MaSanPham, new { @class = "form-control has-feedback-left", @placeholder = "Mã sản phẩm", @required = "required" })
-                                                            <span class="fa fa-user form-control-feedback left" aria-hidden="true"></span>
+                                                            Mã Sản Phẩm: @Html.TextBoxFor(x => x.MaSanPham, new { @class = "form-control has-feedback-left", @placeholder = "Mã sản phẩm", @required = "required" })
+                                                            
                                                         </div>
 
                                                         <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
@@ -83,6 +97,8 @@
                                                             SEO: @Html.TextBoxFor(x => x.SEO, new { @class = "form-control has-feedback-left", @placeholder = "SEO", @required = "required" })
                                                             
                                                         </div>
+
+                                                        <input type="file" name="files"  multiple />
 
                                                     </div>
                                                     <div class="ln_solid"></div>
@@ -124,8 +140,9 @@
                                 <tbody>
                                     @foreach (ShopMyPham.Areas.Admin.Models.SanPhamModel sanPham in list)
                                     {
-                                       
-                                        string idPanel = "#" + sanPham.SanPhamID;                                       
+
+                                        string idPanel = "#" + sanPham.SanPhamID;
+                                        string productEdit = "edit" + sanPham.SanPhamID;
                                         <tr>
                                             
                                             <td>@sanPham.MaSanPham</td>
@@ -136,10 +153,12 @@
                                             <td>@sanPham.SoLanXem</td>
                                             <td>
                                                 <a href="" data-toggle="modal" data-target=@idPanel><span class="glyphicon glyphicon-eye-open" aria-hidden="true" style="margin-left:10px;border-radius: 50%;border:1px solid #5A738E;padding:5px 5px;"></span></a>
-                                                <a href=""><span class="glyphicon glyphicon-pencil" aria-hidden="true" style="margin-left:10px;border-radius: 50%;border:1px solid #5A738E;padding:5px 5px;"></span></a>
+                                                <a href="" data-toggle="modal" data-target='.@productEdit' class="edit" data-idth="@sanPham.IDThuongHieu" data-idl="@sanPham.IDLoai" data-idkm="@sanPham.IDKhuyenMai"><span class="glyphicon glyphicon-pencil" aria-hidden="true" style="margin-left:10px;border-radius: 50%;border:1px solid #5A738E;padding:5px 5px;"></span></a>
                                                 <a href=""><span class="glyphicon glyphicon-remove" aria-hidden="true" style="margin-left:10px;border-radius: 50%;border:1px solid #5A738E;padding:5px 5px;"></span></a>
                                             </td>
-                                        </tr>                                        
+                                        </tr>                           
+                                        
+                                        //Popup modal View             
                                         <div class="modal fade bs-example-modal-lg" id=@sanPham.SanPhamID tabindex="-1" role="dialog">
                                             <div class="modal-dialog modal-lg" role="document">
                                                 <div class="modal-content">
@@ -174,7 +193,7 @@
                                                                             <div class="">
                                                                                 <div class="product_price">
                                                                                     <h1 class="price">@string.Format("{0:#,##0 VND}", @sanPham.GiaBan)</h1>                                                                                    
-                                                                                    <span class="price-tax">Khuyến Mãi:@sanPham.IDKhuyenMai</span>
+                                                                                    <span class="price-tax">Khuyến Mãi:@sanPham.KhuyenMai</span>
                                                                                     <br>
                                                                                 </div>
                                                                             </div>
@@ -187,6 +206,83 @@
                                                     </div>
                                                     <div class="modal-footer">
                                                         <h4>Ngày Thêm: @sanPham.NgayThem</h4>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        //Popup modal Edit
+                                        <div class="modal fade @productEdit" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+                                            <div class="modal-dialog" role="document">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                                        <h4 class="modal-title">Thêm Sản Phẩm</h4>
+                                                    </div>
+                                                    <div class="modal-body">
+                                                        <div class="x_panel" style="border:none">
+                                                            <div class="x_content">
+                                                                <br>
+                                                                @using (Html.BeginForm("editSanPham", "Kho", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                                                                {
+                                                                    @Html.TextBoxFor(x => x.SanPhamID, new { @Value = sanPham.SanPhamID} )
+                                                                    <div class="form-horizontal form-label-left input_mask">
+                                                                        <div class="form-group">
+                                                                            <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
+                                                                                Mã Sản Phẩm: @Html.TextBoxFor(x => x.MaSanPham, new { @class = "form-control has-feedback-left", @placeholder = "Mã sản phẩm", @required = "required", @Value = sanPham.MaSanPham })
+
+                                                                            </div>
+
+                                                                            <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
+                                                                                Tên Sản Phẩm: @Html.TextBoxFor(x => x.TenSanPham, new { @class = "form-control has-feedback-left", @placeholder = "Tên sản phẩm", @required = "required", @Value = sanPham.TenSanPham })
+
+                                                                            </div>
+
+                                                                            <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
+                                                                                Giá Sản Phẩm: @Html.TextBoxFor(x => x.GiaBan, new { @class = "form-control has-feedback-left", @placeholder = "Giá sản phẩm", @required = "required", @Value = sanPham.GiaBan })
+
+                                                                            </div>
+
+                                                                            <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
+                                                                                Mô Tả Sản Phẩm: @Html.TextBoxFor(x => x.Mota, new { @class = "form-control has-feedback-left", @placeholder = "Mô tả sản phẩm", @required = "required", @Value = sanPham.Mota })
+
+                                                                            </div>
+
+                                                                            <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
+                                                                                Thương hiệu: @Html.DropDownListFor(x => x.IDThuongHieu, ViewBag.th as SelectList, new { @class = "form-control has-feedback-left thuonghieu", @required = "required" })
+
+                                                                            </div>
+
+                                                                            <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
+                                                                                Loại Sản Phẩm: @Html.DropDownListFor(x => x.IDLoai, ViewBag.loai as SelectList, new { @class = "form-control has-feedback-left loai", @required = "required" })
+
+                                                                            </div>
+
+                                                                            <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
+                                                                                Khuyến Mãi: @Html.DropDownListFor(x => x.IDKhuyenMai, ViewBag.km as SelectList, new { @class = "form-control has-feedback-left khuyenmai", @required = "required" })
+
+                                                                            </div>
+
+                                                                            <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
+                                                                                SEO: @Html.TextBoxFor(x => x.SEO, new { @class = "form-control has-feedback-left", @placeholder = "SEO", @required = "required", @Value = sanPham.SEO })
+
+                                                                            </div>
+
+                                                                            <input type="file" name="files" multiple />
+
+                                                                        </div>
+                                                                        <div class="ln_solid"></div>
+                                                                        <div class="form-group">
+                                                                            <div class="col-md-9 col-sm-9 col-xs-12 col-md-offset-3">
+                                                                                <button type="reset" class="btn btn-primary">Nhập Lại</button>
+                                                                                <button type="submit" class="btn btn-success">Xác Nhận</button>
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>
+                                                                }
+
+                                                            </div>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
