--- a/ShopMyPham/ShopMyPham/Areas/Admin/Views/KhachHang/ListKhachHang.cshtml
+++ b/ShopMyPham/ShopMyPham/Areas/Admin/Views/KhachHang/ListKhachHang.cshtml
@@ -77,7 +77,7 @@
                                                     <div class="modal-content">
                                                         <div class="modal-header">
                                                             <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                                            <h4 class="modal-title">Thư mục mới</h4>
+                                                            <h4 class="modal-title">Xóa</h4>
                                                         </div>
 
                                                         @using (Html.BeginForm("customerDelete", "KhachHang", new { id = user.ID}, FormMethod.Post))
