--- a/ShopMyPham/ShopMyPham/Areas/Admin/Views/Kho/ListNSX.cshtml
+++ b/ShopMyPham/ShopMyPham/Areas/Admin/Views/Kho/ListNSX.cshtml
@@ -1,9 +1,11 @@
-﻿
+﻿@model ShopMyPham.Areas.Admin.Models.ThuongHieuModel
 @{
     ViewBag.Title = "ListNSX";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
-    var list = (List<ShopMyPham.Models.ThuongHieu>)Model;
+    var list = ViewBag.list as List<ShopMyPham.Models.ThuongHieu>;
 }
+
+
 
 <div class="right_col" role="main">
     <div class="">
@@ -22,11 +24,54 @@
                         <h2>Danh Sách</h2>
                         <ul class="nav navbar-right panel_toolbox">
                             <li>
-                                <button type="button" class="btn btn-success" style="ruby-align:right"><i class="fa fa-plus"></i> Thêm</button>
+                                <button type="button" class="btn btn-success" style="ruby-align:right" data-toggle="modal" data-target="#addTH"><i class="fa fa-plus"></i> Thêm</button>
                             </li>
                         </ul>
                         <div class="clearfix"></div>
                     </div>
+
+                    <div class="modal fade" id="addTH" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                    <h4 class="modal-title">Thêm Thương Hiệu</h4>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="x_panel" style="border:none">
+                                        <div class="x_content">
+                                            <br>
+                                            @using (Html.BeginForm("addThuongHieu", "Kho", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                                            {
+                                                <div class="form-horizontal form-label-left input_mask">
+                                                    <div class="form-group">
+                                                        <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
+                                                            Tên Thương Hiệu: @Html.TextBoxFor(x => x.tenTH, new { @class = "form-control has-feedback-left", @placeholder = "Tên Thương Hiệu", @required = "required" })
+                                                        </div>
+                                                        <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
+                                                            SEO Thương Hiệu: @Html.TextBoxFor(x => x.SEO, new { @class = "form-control has-feedback-left", @placeholder = "SEO Thương Hiệu", @required = "required" })
+                                                        </div>
+                                                        <input type="file" name="files" />
+                                                    </div>
+                                                    <div class="ln_solid"></div>
+                                                    <div class="form-group">
+                                                        <div class="col-md-9 col-sm-9 col-xs-12 col-md-offset-3">
+                                                            <button type="submit" class="btn btn-success">Xác Nhận</button>
+                                                            <button type="reset" class="btn btn-primary">Nhập Lại</button>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            }
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+
                     <div class="x_content">
 
                         <table id="datatable-buttons" class="table table-striped table-bordered">
@@ -34,7 +79,7 @@
                                 <tr>
                                     <th>ID</th>
                                     <th>Tên</th>
-                                    <th>Trạng Thái</th>                                    
+                                    <th>Trạng Thái</th>
                                     <th>Thao Tác</th>
                                 </tr>
                             </thead>
@@ -44,7 +89,18 @@
                                     <tr>
                                         <td>@thuongHieu.ID</td>
                                         <td>@thuongHieu.TenTH</td>
-                                        <td>@thuongHieu.TrangThai</td>                                        
+                                        @if (thuongHieu.TrangThai == 1)
+                                        {
+                                            <td>
+                                                <a href="#" class="btn-activeTH" data-thID=@thuongHieu.ID > Disable </a>
+                                            </td>
+                                        }
+                                        else if (thuongHieu.TrangThai == 0)
+                                        {
+                                            <td>
+                                                <a href="#" class="btn-activeTH" data-thID=@thuongHieu.ID > Active </a>
+                                            </td>
+                                        }
                                         <td>
                                             <a href="#"><span class="glyphicon glyphicon-pencil" aria-hidden="true" style="margin-left:10px;border-radius: 50%;border:1px solid #5A738E;padding:5px 5px;"></span></a>
                                             <a href="#"><span class="glyphicon glyphicon-remove" aria-hidden="true" style="margin-left:10px;border-radius: 50%;border:1px solid #5A738E;padding:5px 5px;"></span></a>
