--- a/ShopMyPham/ShopMyPham/Areas/Admin/Views/Kho/ListLoai.cshtml
+++ b/ShopMyPham/ShopMyPham/Areas/Admin/Views/Kho/ListLoai.cshtml
@@ -1,15 +1,27 @@
-﻿
+﻿@model ShopMyPham.Areas.Admin.Models.LoaiModel
 @{
     ViewBag.Title = "ListLoai";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
-    var list = (List<ShopMyPham.Models.Loai>)Model;
+    var list = ViewBag.list as List<ShopMyPham.Models.Loai>;
 }
+
+<script>
+    $(document).ready(function () {
+
+        $('.editLoai').click(function () {
+            var idth = $(this).data("idloai");
+
+            $(".loai").val(idth);
+        });
+
+    });
+</script>
 
 <div class="right_col" role="main">
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                <h3>Khách Hàng</h3>
+                <h3>Loại</h3>
             </div>
         </div>
 
@@ -22,13 +34,56 @@
                         <h2>Danh Sách</h2>
                         <ul class="nav navbar-right panel_toolbox">
                             <li>
-                                <button type="button" class="btn btn-success" style="ruby-align:right"><i class="fa fa-plus"></i> Thêm</button>
+                                <button type="button" class="btn btn-success" style="ruby-align:right" data-toggle="modal" data-target="#addLoai" ><i class="fa fa-plus"></i> Thêm</button>
                             </li>
                         </ul>
                         <div class="clearfix"></div>
                     </div>
-                    <div class="x_content">
 
+                    @*Popup model Add Loai*@
+                    <div class="modal fade" id="addLoai" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                    <h4 class="modal-title">Thêm Loại</h4>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="x_panel" style="border:none">
+                                        <div class="x_content">
+                                            <br>
+                                            @using (Html.BeginForm("addLoai", "Kho", FormMethod.Post))
+                                            {
+                                                <div class="form-horizontal form-label-left input_mask">
+                                                    <div class="form-group">
+                                                        <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
+                                                            Tên Loại: @Html.TextBoxFor(x => x.tenLoai, new { @class = "form-control has-feedback-left", @placeholder = "Tên Loại", @required = "required" })
+                                                        </div>
+                                                        <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
+                                                            Chủng Loại: @Html.DropDownListFor(x => x.chungloaiID, ViewBag.selectLoai as SelectList, new { @class = "form-control has-feedback-left", @required = "required" })
+                                                        </div>
+                                                        <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
+                                                            SEO Loại: @Html.TextBoxFor(x => x.SEO, new { @class = "form-control has-feedback-left", @placeholder = " SEO Loại", @required = "required" })
+                                                        </div>                                                        
+                                                    </div>
+                                                    <div class="ln_solid"></div>
+                                                    <div class="form-group">
+                                                        <div class="col-md-9 col-sm-9 col-xs-12 col-md-offset-3">
+                                                            <button type="submit" class="btn btn-success">Xác Nhận</button>
+                                                            <button type="reset" class="btn btn-primary">Nhập Lại</button>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            }
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="x_content">
                         <table id="datatable-buttons" class="table table-striped table-bordered">
                             <thead>
                                 <tr>
@@ -42,16 +97,85 @@
                             <tbody>
                                 @foreach (ShopMyPham.Models.Loai loai in list)
                                 {
+                                    string editLoai = "edit" + loai.ID;
+                                    string deleteLoai = "delete" + loai.ID;
                                     <tr>
                                         <td>@loai.ID</td>
                                         <td>@loai.Ten</td>
                                         <td>@loai.ChungLoaiID</td>
                                         <td>@loai.SEO</td>
                                         <td>
-                                            <a href="#"><span class="glyphicon glyphicon-pencil" aria-hidden="true" style="margin-left:10px;border-radius: 50%;border:1px solid #5A738E;padding:5px 5px;"></span></a>
-                                            <a href="#"><span class="glyphicon glyphicon-remove" aria-hidden="true" style="margin-left:10px;border-radius: 50%;border:1px solid #5A738E;padding:5px 5px;"></span></a>
+                                            <a class="editLoai" href="#" data-toggle="modal" data-target=".@editLoai" data-idloai="@loai.ChungLoaiID" ><span class="glyphicon glyphicon-pencil" aria-hidden="true" style="margin-left:10px;border-radius: 50%;border:1px solid #5A738E;padding:5px 5px;"></span></a>
+                                            <a href="#" data-toggle="modal" data-target=".@deleteLoai"><span class="glyphicon glyphicon-remove" aria-hidden="true" style="margin-left:10px;border-radius: 50%;border:1px solid #5A738E;padding:5px 5px;"></span></a>
                                         </td>
                                     </tr>
+
+                                    //Poptup model Edit Loai
+                                    <div class="modal fade @editLoai" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+                                        <div class="modal-dialog" role="document">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                                    <h4 class="modal-title">Thêm Thương Hiệu</h4>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <div class="x_panel" style="border:none">
+                                                        <div class="x_content">
+                                                            <br>
+                                                            @using (Html.BeginForm("editLoai", "Kho", FormMethod.Post))
+                                                            {
+                                                                <div class="form-horizontal form-label-left input_mask">
+                                                                    <div class="form-group">
+                                                                        @Html.TextBoxFor(x => x.IDLoai, new { @type = "hidden", @Value = loai.ID })
+                                                                        <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
+                                                                            Tên Loại: @Html.TextBoxFor(x => x.tenLoai, new { @class = "form-control has-feedback-left", @placeholder = "Tên Loại", @required = "required", @Value = loai.Ten })
+                                                                        </div>
+                                                                        <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
+                                                                            Chủng Loại: @Html.DropDownListFor(x => x.chungloaiID, ViewBag.selectLoai as SelectList, new { @class = "form-control has-feedback-left loai", @placeholder = "SEO Loại", @required = "required", @Value = loai.SEO })
+                                                                        </div>  
+                                                                        <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
+                                                                            SEO Loại: @Html.TextBoxFor(x => x.SEO, new { @class = "form-control has-feedback-left", @placeholder = "SEO Loại", @required = "required", @Value = loai.SEO })
+                                                                        </div>                                                                       
+                                                                    </div>
+                                                                    <div class="ln_solid"></div>
+                                                                    <div class="form-group">
+                                                                        <div class="col-md-9 col-sm-9 col-xs-12 col-md-offset-3">
+                                                                            <button type="submit" class="btn btn-success">Xác Nhận</button>
+                                                                            <button type="reset" class="btn btn-primary">Nhập Lại</button>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            }
+
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    //Popup modal Delete Brand
+                                    <div class="modal fade @deleteLoai" role="dialog">
+                                        <div class="modal-dialog modal-lg">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                                    <h4 class="modal-title">Xóa Thương Hiệu</h4>
+                                                </div>
+
+                                                @using (Html.BeginForm("deleteLoai", "Kho", new { id = loai.ID }, FormMethod.Post))
+                                                {
+                                                    <div class="modal-body">
+                                                        Bạn muốn xóa <b>@loai.Ten</b> ?
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <input id="btnSubmit" class="btn btn-default" type="submit" value="Có" />
+                                                        <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
+                                                    </div>
+                                                }
+                                            </div>
+                                        </div>
+                                    </div>
                                 }
                             </tbody>
                         </table>
